--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
     "require": {
         "php": "^7.1",
 
-        "sylius/sylius": "^1.2",
-        "sensio/generator-bundle": "^3.1"
+        "sylius/sylius": "^1.2"
     },
     "require-dev": {
         "behat/behat": "^3.3",
